Refactored editing labels from phase-list component and implemented Creating new labels

--- a/SpaClient/src/app/projects/phase-list/phase-list.component.css
+++ b/SpaClient/src/app/projects/phase-list/phase-list.component.css
@@ -202,3 +202,11 @@ h1 {
 .bug {
   color: #e5493a;
 }
+
+.btn-default {
+  background-color: rgb(244, 245, 247);
+}
+
+.btn-default:hover {
+  background-color: lightgray;
+}
