--- a/SpaClient/src/app/projects/project-detail/project-detail.component.html
+++ b/SpaClient/src/app/projects/project-detail/project-detail.component.html
@@ -45,7 +45,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <p>{{project.description}}</p>
+    <p [innerHTML]="project.description"></p>
   </div>
 </div>
 
