Implemented removing users from project and refactored search function

--- a/SpaClient/src/app/projects/project-detail/project-detail.component.html
+++ b/SpaClient/src/app/projects/project-detail/project-detail.component.html
@@ -108,7 +108,7 @@
       id="invite-btn" 
       (click)="openModal(inviteModal)"
       tooltip="Add people">
-        <fa-icon [icon]="['fas', 'users']" class="icon"></fa-icon>
+        <fa-icon [icon]="['fas', 'user-plus']" class="icon"></fa-icon>
     </button>
     <button 
       class="btn btn-outline-warning" 
