Added charts for issue statuses and issue types in project-manage component

--- a/SpaClient/src/app/projects/project-manage/project-manage.component.html
+++ b/SpaClient/src/app/projects/project-manage/project-manage.component.html
@@ -80,6 +80,27 @@
   </div>
 </div>
 
+<div class="row" id="charts">
+  <div class="col-md-6">
+    <h5 class="text-center">Issue types</h5>
+    <canvas baseChart 
+      [data]="issueTypesChartData"
+      [labels]="issueTypesChartLabels"
+      [chartType]="issyeTypesChartType"
+      [colors]="issueTypesChartColors">
+    </canvas>
+  </div>
+  <div class="col-md-6">
+    <h5 class="text-center">Issue statuses</h5>
+    <canvas baseChart 
+      [data]="issueStatusesChartData" 
+      [labels]="issueStatusesChartLabels" 
+      [chartType]="issueStatusesChartType"
+      [colors]="issueStatusesChartColors">
+    </canvas>
+  </div>
+</div>
+
 <!-- Modals -->
 
 <!-- Delete modal -->
