--- a/SpaClient/src/app/projects/project-list/project-list.component.html
+++ b/SpaClient/src/app/projects/project-list/project-list.component.html
@@ -5,7 +5,7 @@
       <span class="ml-3" *ngIf="projectsService.loading$ | async">Loading...</span>
   </div>
 
-  <table class="table table-striped">
+  <table class="table table-hover">
     <thead>
       <tr>
         <th scope="col"><fa-icon [icon]="['fas', 'star']"></fa-icon></th>
@@ -19,7 +19,7 @@
       <td><fa-icon [icon]="['far', 'star']"></fa-icon></td>
       <td><a [routerLink]="['/projects', project.id]" ><ngb-highlight [result]="project.name" [term]="projectsService.searchTerm"></ngb-highlight></a></td>
       <!-- <td><ngb-highlight [result]="project.name" [term]="service.searchTerm"></ngb-highlight></td> -->
-      <td><ngb-highlight [result]="project.createdByFullName" [term]="projectsService.searchTerm"></ngb-highlight></td>
+      <td><ngb-highlight [result]="project.createdBy.fullName" [term]="projectsService.searchTerm"></ngb-highlight></td>
       <td><ngb-highlight>Options</ngb-highlight></td>
     </tr>
     </tbody>
