--- a/SpaClient/src/app/projects/project-manage/project-manage.component.html
+++ b/SpaClient/src/app/projects/project-manage/project-manage.component.html
@@ -31,7 +31,7 @@
       </div>
     </form>
     
-    <table class="table">
+    <table class="table table-hover">
       <thead>
       <tr>
         <th scope="col">#</th>
