--- a/SpaClient/src/app/projects/project-manage/project-manage.component.html
+++ b/SpaClient/src/app/projects/project-manage/project-manage.component.html
@@ -77,6 +77,23 @@
       </tr>
       </tbody>
     </table>
+
+    <div class="d-flex justify-content-between p-2">
+      <ngb-pagination [collectionSize]="total$ | async" 
+                      [(page)]="page" 
+                      [pageSize]="pageSize" 
+                      (pageChange)="onPageChange()">
+      </ngb-pagination>
+    
+      <select class="custom-select" 
+              style="width: auto" 
+              [(ngModel)]="pageSize" 
+              (ngModelChange)="onPageChange()">
+        <option [ngValue]="2">2 items per page</option>
+        <option [ngValue]="4">4 items per page</option>
+        <option [ngValue]="8">8 items per page</option>
+      </select>
+    </div>
   </div>
 </div>
 
