--- a/SpaClient/src/app/nav/nav.component.css
+++ b/SpaClient/src/app/nav/nav.component.css
@@ -55,3 +55,7 @@
   text-align: center;
   vertical-align: center;
 }
+
+.fa-select {
+  font-family: 'FontAwesome', -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";;
+}
