--- a/SpaClient/src/app/projects/phase-list/phase-list.component.html
+++ b/SpaClient/src/app/projects/phase-list/phase-list.component.html
@@ -239,13 +239,15 @@
           <div class="form-group">
             <label for="labels">Labels</label>
             <br>
-            <div class="form-check form-check-inline" *ngFor="let label of labels">
+            <div class="form-check form-check-inline" *ngFor="let label of labelsChecked">
               <input 
                 class="form-check-input" 
                 type="checkbox"
                 id="{{label.id}}-create" 
                 [value]="label.id"
-                (change)="labelChecked($event)">
+                (change)="labelChecked($event)"
+                [(ngModel)]="label.checked"
+                [ngModelOptions]="{standalone: true}">
               <label class="form-check-label" for="{{label.id}}-create">{{label.name}}</label>
             </div>
           </div>
